# drift

./: .env.example  .gitignore  LLM.md  README.md  RELEASE_CHECKLIST.md  demo.py  drift-dendric-spec.html  drift_cli.py  pyproject.toml
.github/workflows/: test.yml
apps/web/: package-lock.json  package.json
apps/web/app/: TerminalDemo.tsx  globals.css  highlight.tsx  layout.tsx  page.tsx
docs/: README.md  cookbook.md  gotchas.md  language.md  mcp-server.md
drift/: __init__.py  ast_nodes.py  cli.py  codegen.py  formatter.py  lexer.py  mcp_server.py  parser.py
drift/data/: __init__.py
drift/io/: __init__.py
drift/notify/: __init__.py
drift/observe/: __init__.py
drift/runtime/: __init__.py  core.py  dendric_store.py  mcp_client.py
drift/safety/: __init__.py
drift/templates/: env.example  starter.drift
drift/text/: __init__.py
drift/time/: __init__.py
examples/: confident_demo.drift  confident_demo.py  grant_checker.drift  grant_checker.py  grant_checker_compare.drift  grant_checker_compare.py  grant_checker_compare_demo.py  grant_checker_memory_demo.py  grant_checker_with_memory.drift  grant_checker_with_memory.py  hello.drift  hello.py  inbox_sorter.drift  inbox_sorter.py  inbox_triage_live.drift  inbox_triage_live.py  sample_inbox.json
examples/apps/: candidate_schemas.drift  candidate_schemas.py  content_moderator.drift  content_moderator.py  lead_qualifier.drift  lead_qualifier.py  resume_screener.drift  resume_screener.py  support_escalation.drift  support_escalation.py  ticket_triage.drift  ticket_triage.py  travel_advisor.drift  travel_advisor.py
tests/: conftest.py
tests/adversarial/: test_edge_cases.py  test_injection.py
tests/golden/: test_smoke_runs.py  test_transpile_examples.py
tests/unit/: test_attempt_recover.py  test_cli.py  test_codegen.py  test_confident.py  test_define_verb.py  test_deja_vu.py  test_dendric_integration.py  test_forget.py  test_formatter.py  test_imports.py  test_lexer.py  test_match_disambiguation.py  test_mcp_runtime.py  test_mcp_server.py  test_memory.py  test_model_block.py  test_parallel.py  test_parser.py  test_pipe_expr.py  test_pipeline.py  test_runtime.py  test_state.py  test_step_modifiers.py  test_stream_then.py  test_tool.py
vscode-drift/: .vscodeignore  LICENSE  PUBLISHING.md  README.md  language-configuration.json  package.json
vscode-drift/syntaxes/: drift.tmLanguage.json
web/: index.html
