[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-lang"
version = "0.1.0"
description = "An intent-based language for agentic systems — write agents in English, run them as async Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Riley Coleman" }]
keywords = ["agents", "llm", "transpiler", "dsl", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dendric = ["dendric", "psycopg2-binary", "pgvector", "openai>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
all = ["mcp>=1.0", "dendric", "psycopg2-binary", "pgvector", "openai>=1.0"]

[project.scripts]
drift = "drift.cli:main"

[project.urls]
Homepage = "https://github.com/rileyq7/drift"
Repository = "https://github.com/rileyq7/drift"
Issues = "https://github.com/rileyq7/drift/issues"

[tool.setuptools.packages.find]
include = ["drift*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
drift = ["templates/*.drift", "templates/*.example"]
